[tool.poetry]
name = "python3_B0B"
version = "0.1.5"
description = "A discord bot that hates violence and swearing."
authors = ["Da2dalus"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
